Se añadió una posible estrictura de los htmls

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <title></title>
 </head>
 <body>
   <h1>Hola mundo</h1>
-  <a href="./login.html">aqu+i</a>
+  <p>Aquí será la páquina principal</p>
 </body>
 </html>
