Se estableció el cgi inicial

--- a/login.html
+++ b/login.html
@@ -5,9 +5,13 @@
   <title></title>
 </head>
 <body>
- <form class="login" action="">
+  <h1>Login :)</h1>
+  <form class="login" action="./cgi-bin/Aulavirtual.pl">
    <label for="">id</label>
+   <input name="user">
+   <br>
    <label for="">password</label>
+   <input name="password">
  </form>
 </body>
 </html>
