--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 <body>
   <h1>Hola mundo</h1>
   <p>Aquí será la páquina principal</p>
+  <a href="./login.html">Ir a login</a>
+  
 </body>
 </html>
