Modificamos el nombre del campo para que se envie al cgi correctamente

--- a/login.html
+++ b/login.html
@@ -6,12 +6,12 @@
 </head>
 <body>
   <h1>Login :)</h1>
-  <form class="login" action="./cgi-bin/Aulavirtual.pl">
+  <form class="login" action="cgi-bin/login-user.pl">
    <label for="">id</label>
-   <input name="user">
-   <br>
+   <input type="text" name="dni">
    <label for="">password</label>
-   <input name="password">
+   <input type="text" name="password">
+   <input type="submit" value="Iniciar Sesion">
  </form>
 </body>
 </html>
