--- a/login.html
+++ b/login.html
@@ -2,16 +2,32 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title></title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="styles/login.css">
+  <title>Inicia sesión - Grupo Piensa</title>
 </head>
 <body>
-  <h1>Login :)</h1>
-  <form class="login" action="cgi-bin/login-user.pl">
-   <label for="">id</label>
-   <input type="text" name="dni">
-   <label for="">password</label>
-   <input type="text" name="password">
-   <input type="submit" value="Iniciar Sesion">
- </form>
+  <div class="wrapper">
+    <section>
+      <div class="slider">
+        <img src="https://scontent.faqp3-1.fna.fbcdn.net/v/t1.6435-9/69583590_358722238352103_6516123149388480512_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=4dc865&_nc_eui2=AeHEvJQQddy5DHL1KeQ8xMUd9ZKEHtp-l8P1koQe2n6Xwy_rPJmZ04fsTno5yqdYz5rC3BllewRKuege6ADhvfpq&_nc_ohc=9rsvQBGZuIEAX-g1LEq&_nc_ht=scontent.faqp3-1.fna&oh=00_AfA1DVfwGJUdC_zWM-U3ce82NQpfGBugzZ-1gOkEmaAj5w&oe=65CE50F9">
+        <img src="https://scontent.faqp3-1.fna.fbcdn.net/v/t1.6435-9/69770039_358721918352135_3655544565110145024_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=4dc865&_nc_eui2=AeFP3gY5T8O1fk7rflbz_olA3YOqZGxZ8B3dg6pkbFnwHbXpCZwBQctxSDTBUat23JcQ_B9Hhp3U7eYcdA93yJXT&_nc_ohc=2hwbnpH3IKcAX8m02oP&_nc_ht=scontent.faqp3-1.fna&oh=00_AfA30sdBLtzT2ZGmTYBUT3ghTcNPZE-qt8fQEk4N1Vmsdw&oe=65CE609B">
+        <img src="https://scontent.faqp3-1.fna.fbcdn.net/v/t39.30808-6/297648623_1058174505073536_5911446055835722436_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=3635dc&_nc_eui2=AeGpwAu5n8Lo_b2eYjedeGrZyOfDoFokM1zI58OgWiQzXE-xmxij4kI2n2T5vtimOOTrYOrB7cpivz026Zegxfdr&_nc_ohc=YpxQlz5sRkAAX-THu1f&_nc_ht=scontent.faqp3-1.fna&oh=00_AfBwVBx6brIBZKN4mVUfmBYwzw7ZEGVs208vPanWuf7oxg&oe=65AC5FC8">
+      </div>
+    </section>
+    <section>
+      <article>
+        <img src="img/download.png">
+        <h1>Ingresa tus datos</h1>
+        <form class="login" action="cgi-bin/login-user.pl">
+          <label for="dni">DNI</label>
+          <input type="number" name="dni">
+          <label for="password">Contraseña</label>
+          <input type="password" name="password">
+          <input type="submit" value="Iniciar Sesion">
+        </form>
+      </article>
+    </section>
+  </div>
 </body>
 </html>
