--- a/login.html
+++ b/login.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="styles/login.css">
-  <title>Inicia sesión - Grupo Piensa</title>
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&family=Nanum+Gothic+Coding&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="styles/login.css">
+    <title>Inicia sesión - Grupo Piensa</title>
+  </head>
 <body>
   <div class="wrapper">
-    <section>
+    <section class="first-section">
       <div class="slider">
         <img src="https://scontent.faqp3-1.fna.fbcdn.net/v/t1.6435-9/69583590_358722238352103_6516123149388480512_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=4dc865&_nc_eui2=AeHEvJQQddy5DHL1KeQ8xMUd9ZKEHtp-l8P1koQe2n6Xwy_rPJmZ04fsTno5yqdYz5rC3BllewRKuege6ADhvfpq&_nc_ohc=9rsvQBGZuIEAX-g1LEq&_nc_ht=scontent.faqp3-1.fna&oh=00_AfA1DVfwGJUdC_zWM-U3ce82NQpfGBugzZ-1gOkEmaAj5w&oe=65CE50F9">
         <img src="https://scontent.faqp3-1.fna.fbcdn.net/v/t1.6435-9/69770039_358721918352135_3655544565110145024_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=4dc865&_nc_eui2=AeFP3gY5T8O1fk7rflbz_olA3YOqZGxZ8B3dg6pkbFnwHbXpCZwBQctxSDTBUat23JcQ_B9Hhp3U7eYcdA93yJXT&_nc_ohc=2hwbnpH3IKcAX8m02oP&_nc_ht=scontent.faqp3-1.fna&oh=00_AfA30sdBLtzT2ZGmTYBUT3ghTcNPZE-qt8fQEk4N1Vmsdw&oe=65CE609B">
         <img src="https://scontent.faqp3-1.fna.fbcdn.net/v/t39.30808-6/297648623_1058174505073536_5911446055835722436_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=3635dc&_nc_eui2=AeGpwAu5n8Lo_b2eYjedeGrZyOfDoFokM1zI58OgWiQzXE-xmxij4kI2n2T5vtimOOTrYOrB7cpivz026Zegxfdr&_nc_ohc=YpxQlz5sRkAAX-THu1f&_nc_ht=scontent.faqp3-1.fna&oh=00_AfBwVBx6brIBZKN4mVUfmBYwzw7ZEGVs208vPanWuf7oxg&oe=65AC5FC8">
+        <div></div>
       </div>
     </section>
-    <section>
+    <section class="sec-section">
+      <img src="img/download.png">
       <article>
-        <img src="img/download.png">
-        <h1>Ingresa tus datos</h1>
+        <h1 class="form-guide">Ingresa tus datos</h1>
         <form class="login" action="cgi-bin/login-user.pl">
-          <label for="dni">DNI</label>
-          <input type="number" name="dni">
-          <label for="password">Contraseña</label>
-          <input type="password" name="password">
-          <input type="submit" value="Iniciar Sesion">
+          <label class="input-label" for="dni">DNI</label>
+           <input class="input-data" type="number" name="dni" required>
+          <label class="input-label" for="password">Contraseña</label>
+          <input class="input-data" type="password" name="password" required>
+          <input class="text-button" type="submit" value="Iniciar Sesión">
         </form>
       </article>
     </section>
