Agregando el metodo post

--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
       <article>
         <img src="img/download.png">
         <h1>Ingresa tus datos</h1>
-        <form class="login" action="cgi-bin/login-user.pl">
+        <form class="login" action="cgi-bin/login-user.pl" method=POST>
           <label for="dni">DNI</label>
           <input type="number" name="dni">
           <label for="password">Contraseña</label>
