--- a/login.html
+++ b/login.html
@@ -22,14 +22,13 @@
     <section class="sec-section">
       <img src="img/download.png">
       <article>
-        <img src="img/download.png">
-        <h1>Ingresa tus datos</h1>
+        <h1 class="form-guide">Ingresa tus datos</h1>
         <form class="login" action="cgi-bin/login-user.pl" method="POST">
-          <label for="dni">DNI</label>
-          <input type="number" name="dni">
-          <label for="password">Contraseña</label>
-          <input type="password" name="password">
-          <input type="submit" value="Iniciar Sesion">
+          <label class="input-label" for="dni">DNI</label>
+          <input class="input-data" type="number" name="dni">
+          <label class="input-label" for="passw">Contraseña</label>
+          <input class="input-data" type="password" name="passw">
+          <input class="text-button" type="submit" value="Iniciar Sesion">
         </form>
       </article>
     </section>
