--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     
     <div class="hero-slide owl-carousel site-blocks-cover">
-      <div class="intro-section" style="background-image: url('https://scontent.faqp3-1.fna.fbcdn.net/v/t39.30808-6/297648623_1058174505073536_5911446055835722436_n.jpg?_nc_cat=102&amp;ccb=1-7&amp;_nc_sid=3635dc&amp;_nc_eui2=AeGpwAu5n8Lo_b2eYjedeGrZyOfDoFokM1zI58OgWiQzXE-xmxij4kI2n2T5vtimOOTrYOrB7cpivz026Zegxfdr&amp;_nc_ohc=YpxQlz5sRkAAX-THu1f&amp;_nc_ht=scontent.faqp3-1.fna&amp;oh=00_AfBwVBx6brIBZKN4mVUfmBYwzw7ZEGVs208vPanWuf7oxg&amp;oe=65AC5FC8');">
+      <div class="intro-section" style="background-image: url('img/grupo_piensa_main_bg.jpg');">
         <div class="container">
           <div class="row align-items-center">
             <div class="col-lg-12 mx-auto text-center" data-aos="fade-up">
