--- a/index.html
+++ b/index.html
@@ -13,58 +13,52 @@
 <body>
 
   <div class="site-wrap">
+    <div class="fixed-up">
 
-    <header role="banner">
+      <header role="banner">
 
         <div class="site-logo">
           <a href="index.html" class="reference">
             <img src="img/download.png" alt="Image" class="img-show">
           </a>
         </div>
-        <article class="right-content">
-          <div class="social-wrap">
-            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-            <a href="#"><i class="fa-brands fa-tiktok"></i></a>
-          </div>
-          <div class="reference">
-            <a href="login.html">Acceder</a>
-          </div>
-        </article>
+        <div class="social-wrap">
+          <a href="#" class="reference"><i class="fa-brands fa-facebook-f"></i></a>
+          <a href="#" class="reference"><i class="fa-brands fa-tiktok"></i></a>
+          <a href="login.html" class="reference">Acceder</a>
+        </div>
 
-    </header>
-    <nav class="site-navigation position-relative text-right" role="navigation">
-      <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-        <li class="active">
-          <a href="index.html" class="nav-link text-left" style="color:White"><b>Indice</b></a>
-        </li>
-        <li class="has-children">
-          <a href="about.html" class="nav-link text-left" style="color:White"><b>Sobre nosotros</b></a>
-          <ul class="dropdown">
-            <li><a href="teachers.html" style="color:White"><b>Nuestros Profesores</b></a></li>
-            <li><a href="about.html" style="color:White"><b>Nuestra Escuela</b></a></li>
-          </ul>
-        </li>
+      </header>
 
-        <li>
-          <a href="courses.html" class="nav-link text-left" style="color:white"><b>Cursos</b></a>
-        </li>
-        <li>
-          <a href="contact.html" class="nav-link text-left" style="color:white"><b>Contacto</b></a>
-        </li>
-      </ul>
-      <div class="social-wrap">
-        <a href="#"><span class="icon-facebook"></span></a>
-        <a href="#"><span class="icon-instagram"></span></a>
-        <a href="#"><span class="icon-linkedin"></span></a>
+      <nav role="navigation">
+        <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
+          <li class="active">
+            <a href="index.html" class="nav-link text-left"><b>Indice</b></a>
+          </li>
+          <li class="has-children">
+            <a href="about.html" class="nav-link text-left"><b>Sobre nosotros</b></a>
+            <ul class="dropdown">
+              <li><a href="teachers.html"><b>Nuestros Profesores</b></a></li>
+              <li><a href="about.html"><b>Nuestra Escuela</b></a></li>
+            </ul>
+          </li>
 
-        <a href="#" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black"><span
-                    class="icon-menu h3"></span></a>
+          <li>
+            <a href="courses.html" class="nav-link text-left"><b>Cursos</b></a>
+          </li>
+          <li>
+            <a href="contact.html" class="nav-link text-left"><b>Contacto</b></a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    
+      <div class="mod-style container">
       </div>
-    </nav>
 
     
     <div class="hero-slide owl-carousel site-blocks-cover">
-      <div class="intro-section" style="background-image: url('https://scontent.faqp3-1.fna.fbcdn.net/v/t39.30808-6/297648623_1058174505073536_5911446055835722436_n.jpg?_nc_cat=102&amp;ccb=1-7&amp;_nc_sid=3635dc&amp;_nc_eui2=AeGpwAu5n8Lo_b2eYjedeGrZyOfDoFokM1zI58OgWiQzXE-xmxij4kI2n2T5vtimOOTrYOrB7cpivz026Zegxfdr&amp;_nc_ohc=YpxQlz5sRkAAX-THu1f&amp;_nc_ht=scontent.faqp3-1.fna&amp;oh=00_AfBwVBx6brIBZKN4mVUfmBYwzw7ZEGVs208vPanWuf7oxg&amp;oe=65AC5FC8');">
+      <div class="intro-section">
         <div class="container">
           <div class="row align-items-center">
             <div class="col-lg-12 mx-auto text-center" data-aos="fade-up">
@@ -83,7 +77,7 @@
         <div class="row mb-5 justify-content-center text-center">
           <div class="col-lg-4 mb-5">
             <h2 class="section-title-underline mb-5">
-              <span>Por qué elejirnos</span>
+              <span>Por qué elegirnos</span>
             </h2>
           </div>
         </div>
@@ -95,7 +89,8 @@
                 <span class="flaticon-mortarboard text-white"></span>
               </div>
               <div class="feature-1-content">
-                <h2>Atencion Personal</h2>
+                <h2>Atención Personal</h2>
+
                 <p>Tanto en la modalidad presencial como la virtual</p>
                 <p><a href="#" class="btn btn-primary px-4 rounded-0">Entérate más</a></p>
               </div>
