--- a/login.html
+++ b/login.html
@@ -1,4 +1,5 @@
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,7 +21,7 @@
           <img src="https://scontent.faqp3-1.fna.fbcdn.net/v/t1.6435-9/69770039_358721918352135_3655544565110145024_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=4dc865&_nc_eui2=AeFP3gY5T8O1fk7rflbz_olA3YOqZGxZ8B3dg6pkbFnwHbXpCZwBQctxSDTBUat23JcQ_B9Hhp3U7eYcdA93yJXT&_nc_ohc=2hwbnpH3IKcAX8m02oP&_nc_ht=scontent.faqp3-1.fna&oh=00_AfA30sdBLtzT2ZGmTYBUT3ghTcNPZE-qt8fQEk4N1Vmsdw&oe=65CE609B"> 
         </div>
         <div class="mySlides">
-          <img src="https://scontent.faqp3-1.fna.fbcdn.net/v/t39.30808-6/297648623_1058174505073536_5911446055835722436_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=3635dc&_nc_eui2=AeGpwAu5n8Lo_b2eYjedeGrZyOfDoFokM1zI58OgWiQzXE-xmxij4kI2n2T5vtimOOTrYOrB7cpivz026Zegxfdr&_nc_ohc=YpxQlz5sRkAAX-THu1f&_nc_ht=scontent.faqp3-1.fna&oh=00_AfBwVBx6brIBZKN4mVUfmBYwzw7ZEGVs208vPanWuf7oxg&oe=65AC5FC8"> 
+          <img src="img/background.jpeg"> 
         </div>
         <div></div>
       </div>      
