--- a/login.html
+++ b/login.html
@@ -10,41 +10,32 @@
     <title>Inicia sesión - Grupo Piensa</title>
     <script src="src/script.js"></script>
   </head>
-<body>
-  <div class="wrapper">
-    <section class="first-section">
+  <body>
       <div class="slider">
         <div class="mySlides">
-          <img src="https://scontent.faqp3-1.fna.fbcdn.net/v/t1.6435-9/69583590_358722238352103_6516123149388480512_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=4dc865&_nc_eui2=AeHEvJQQddy5DHL1KeQ8xMUd9ZKEHtp-l8P1koQe2n6Xwy_rPJmZ04fsTno5yqdYz5rC3BllewRKuege6ADhvfpq&_nc_ohc=9rsvQBGZuIEAX-g1LEq&_nc_ht=scontent.faqp3-1.fna&oh=00_AfA1DVfwGJUdC_zWM-U3ce82NQpfGBugzZ-1gOkEmaAj5w&oe=65CE50F9"> 
+          <img src="img/image1.jpeg">
         </div>
         <div class="mySlides">
-          <img src="https://scontent.faqp3-1.fna.fbcdn.net/v/t1.6435-9/69770039_358721918352135_3655544565110145024_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=4dc865&_nc_eui2=AeFP3gY5T8O1fk7rflbz_olA3YOqZGxZ8B3dg6pkbFnwHbXpCZwBQctxSDTBUat23JcQ_B9Hhp3U7eYcdA93yJXT&_nc_ohc=2hwbnpH3IKcAX8m02oP&_nc_ht=scontent.faqp3-1.fna&oh=00_AfA30sdBLtzT2ZGmTYBUT3ghTcNPZE-qt8fQEk4N1Vmsdw&oe=65CE609B"> 
+          <img src="img/image2.jpg">
         </div>
         <div class="mySlides">
-          <img src="img/background.jpeg"> 
+          <img src="img/image3.jpg"> 
         </div>
-        <div></div>
-      </div>      
-      <div style="text-align:center">
-        <span class="dot"></span> 
-        <span class="dot"></span> 
-        <span class="dot"></span> 
-      </div>
-    </section>
-    <section class="sec-section">
-      <img src="img/download.png">
-      <article>
-        <h1 class="form-guide">Ingresa tus datos</h1>
-        <form class="login" action="cgi-bin/login-user.pl" method="POST">
+        <div class="opacity"></div>
+        <section class="sec-section">
+          <img src="img/download.png">
+          <article>
+            <h1 class="form-guide">Ingresa tus datos</h1>
+            <form class="login" action="cgi-bin/login-user.pl" method="POST">
 
-          <label class="input-label" for="dni">DNI</label>
-          <input class="input-data" type="number" name="dni">
-          <label class="input-label" for="passw">Contraseña</label>
-          <input class="input-data" type="password" name="passw">
-          <input class="text-button" type="submit" value="Iniciar Sesion">
-        </form>
-      </article>
-    </section>
-  </div>
-</body>
+              <label class="input-label" for="dni">DNI</label>
+              <input class="input-data" type="number" name="dni">
+              <label class="input-label" for="passw">Contraseña</label>
+              <input class="input-data" type="password" name="passw">
+              <input class="text-button" type="submit" value="Iniciar Sesion">
+            </form>
+          </article>
+        </section>
+      </div>
+  </body>
 </html>
