Correción de error ortográfico

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <a href="#" class="small mr-3"><span class="icon-envelope-o mr-2"></span> snrsecretario@piensa.com</a> 
           </div>
           <div class="col-lg-3 text-right">
-            <a href="login.html" class="small mr-3"><span class="icon-unlock-alt"></span> Accesder</a>
+            <a href="login.html" class="small mr-3"><span class="icon-unlock-alt"></span> Acceder</a>
             <a href="register.html" class="small btn btn-primary px-4 py-2 rounded-0"><span class="icon-users"></span> Registrarse</a>
           </div>
         </div>
