--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
               <label class="warning input-label">Ingrese 8 dígitos</label>
               <label class="input-label" for="passw">Contraseña</label>
               <input class="input-data" type="password" pattern=".{8}.*" name="passw">
-              <label class="warning input-label">Ingrese al menos 8 dígitos</label>
+              <label class="warning input-label">Ingrese al menos 8 letras y/o dígitos</label>
               <input class="text-button" type="submit" value="Iniciar Sesion">
 
             </form>
