--- a/login.html
+++ b/login.html
@@ -11,23 +11,24 @@
     <script src="src/script.js"></script>
   </head>
   <body>
-      <div class="slider">
-        <div class="mySlides">
-          <img src="img/image1.jpeg">
-        </div>
-        <div class="mySlides">
-          <img src="img/image2.jpg">
-        </div>
-        <div class="mySlides">
-          <img src="img/image3.jpg"> 
-        </div>
-        <div class="opacity"></div>
-        <section class="sec-section">
+      <div class="wrapper">
+        <section class="slider-content">
+          <div class="mySlides">
+            <img src="img/image1.jpeg">
+          </div>
+          <div class="mySlides">
+            <img src="img/image2.jpg">
+          </div>
+          <div class="mySlides">
+            <img src="img/image3.jpg"> 
+          </div>
+          <div class="opacity"></div>
+        </section>
+        <section class="login-section">
           <img src="img/download.png">
           <article>
             <h1 class="form-guide">Ingresa tus datos</h1>
             <form class="login" action="cgi-bin/login-user.pl" method="POST">
-
               <label class="input-label" for="dni">DNI</label>
               <input class="input-data" pattern="[0-9]{8}" name="dni" oninvalid="setCustomValidity(' ');this.classList.add('oninvalid');">
               <label class="warning input-label">Ingrese 8 dígitos</label>
@@ -35,7 +36,6 @@
               <input class="input-data" type="password" pattern=".{8}.*" name="passw"  oninvalid="setCustomValidity(' ');this.classList.add('oninvalid');">
               <label class="warning input-label">Ingrese al menos 8 letras y/o dígitos</label>
               <input class="text-button" type="submit" value="Iniciar Sesion">
-
             </form>
           </article>
         </section>
