He añadido archivos específicos para ciertos tipos de elementos en los estilos

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <base target="_blank">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="styles/fonts.css">
+  <link rel="stylesheet" type="text/css" href="styles/normalize.css">
   <link rel="stylesheet" type="text/css" href="styles/structure.css">
   <script src="https://kit.fontawesome.com/5e1720d8b8.js" crossorigin="anonymous"></script>
 </head>
@@ -20,7 +22,7 @@
 
         <div class="site-logo">
           <a href="index.html">
-            <img src="img/download.png" alt="Image" class="img-show">
+            <img src="img/download.png" alt="Logo piensa" class="img-show">
           </a>
         </div>
         <div class="social-wrap">
@@ -108,7 +110,7 @@
 
     <section> 
       <header>
-        <h2>Los mejores cursos para ti</h2>
+        <h2>Docentes profesionales y capacitados</h2>
       </header>
       <article>
         <div class="item-teacher"></div>
