--- a/login.html
+++ b/login.html
@@ -6,6 +6,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&family=Nanum+Gothic+Coding&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="styles/normalize.css">
+    <link rel="stylesheet" type="text/css" href="styles/fonts.css">
     <link rel="stylesheet" type="text/css" href="styles/login.css">
     <title>Inicia sesión - Grupo Piensa</title>
     <script src="src/script.js"></script>
@@ -35,7 +37,7 @@
               <label class="input-label" for="passw">Contraseña</label>
               <input class="input-data" type="password" pattern=".{8}.*" name="passw"  oninvalid="setCustomValidity(' ');this.classList.add('oninvalid');">
               <label class="warning input-label">Ingrese al menos 8 letras y/o dígitos</label>
-              <input class="text-button" type="submit" value="Iniciar Sesion">
+              <input class="text-button" type="submit" value="Iniciar Sesión">
             </form>
           </article>
         </section>
