Se modificó el contenido que se mostrará en el aula virtual

--- a/esqueletos/aulaVirtual.html
+++ b/esqueletos/aulaVirtual.html
@@ -21,12 +21,11 @@
   -->
   <ol>
     <li>Imagen (identificable con el título del curso)</li>
-    <li>turno</li>
     <li>hora inicio</li>
     <li>hora final</li>
     <li>profesor que dicta</li>
-    <li>hora de inicio</li>
-    <li>hora de fianl</li>
+    <li>fecha de inicio</li>
+    <li>fecha de fianl</li>
     <li>aula que le toca</li>
   </ol>
 
