Mejorando el diseño del Aulavirtual

--- a/esqueletos/Aulavirtualteachers.html
+++ b/esqueletos/Aulavirtualteachers.html
@@ -11,13 +11,14 @@
         <div class="tabladeopciones">
             <!-- Contenido del lado izquierdo (opciones) -->
             <div class="imagenes">
-                <img src="./download.png">
+                <img src="../img/download.png">
             </div>
             <div class="opciones">
                 <ul>
-                    <li><a href="./teachers.html">Profesores</a></li>
-                    <li><a href="./courses.html">Cursos</a></li>
-                    <li><a href="./themes.html">Temas</a></li>
+                    <li><a href="./teachers.html">HOME <br> ➞</a></li>
+                    <li><a href="./teachers.html">PROFESORES <br> ➞</a></li>
+                    <li><a href="./courses.html">CURSOS <br> ➞</a></li>
+                    <li><a href="./themes.html">INFORMACION PERSONAL <br> ➞</a></li>
                 </ul>
             </div>
         </div>
@@ -56,8 +57,7 @@
                         </div>
                     </div>
                 </article>
-        </div>
+            </div>
     </div>
 </body>
 </html>
-
