Frase ingenieros formando ingenieros y centrar texto

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
     </picture>
     
     <section class="title-section">
-      <h1>Grupo Piensa</h1>
+      <h1 class="center-content">Grupo Piensa</h1>
+      <h2 class="center-content">INGENIEROS FORMANDO INGENIEROS</h2>
     </section>
     
     <section class="reasons">
