Añadiendo las tarjetas generales a la página principal

--- a/index.html
+++ b/index.html
@@ -88,21 +88,147 @@
       </header>
 
       <!-- las tarjetas para cada curso-->
-      <article>
-        <div class="item-course"></div>
-        <div class="item-course"></div>
-        <div class="item-course"></div>
-        <div class="item-course"></div>
-        <div class="item-course"></div>
-        <div class="item-course"></div>
-        <div class="item-course"></div>
-        <div class="item-course"></div>
-        <div class="item-course"></div>
-        <div class="item-course"></div>
-        <div class="item-course"></div>
-        <div class="item-course"></div>
-        <div class="item-course"></div>
-        <div class="item-course"></div>
+      <article class="courses-cards">
+        <div class="item-course">
+          <a class="link-course">
+            <div>
+              <h3>Cálculo 1</h3>
+            </div>
+            <div>
+              <p>Quiero saber más</p>
+            </div>
+          </a>
+        </div>
+        <div class="item-course">
+          <a class="link-course">
+            <div>
+              <h3>Matemática Básica</h3>
+            </div>
+            <div>
+              <p>Quiero saber más</p>
+            </div>
+          </a>
+        </div>
+        <div class="item-course">
+          <a class="link-course">
+            <div>
+              <h3>Física 1</h3>
+            </div>
+            <div>
+              <p>Quiero saber más</p>
+            </div>
+          </a>
+        </div>
+        <div class="item-course">
+          <a class="link-course">
+            <div>
+              <h3>Química 1</h3>
+            </div>
+            <div>
+              <p>Quiero saber más</p>
+            </div>
+          </a>
+        </div>
+        <div class="item-course">
+          <a class="link-course">
+            <div>
+              <h3>Cálculo 2</h3>
+            </div>
+            <div>
+              <p>Quiero saber más</p>
+            </div>
+          </a>
+        </div>
+        <div class="item-course">
+          <a class="link-course">
+            <div>
+              <h3>Física 2</h3>
+            </div>
+            <div>
+              <p>Quiero saber más</p>
+            </div>
+          </a>
+        </div>
+        <div class="item-course">
+          <a class="link-course">
+            <div>
+              <h3>Estática</h3>
+            </div>
+            <div>
+              <p>Quiero saber más</p>
+            </div>
+          </a>
+        </div>
+        <div class="item-course">
+          <a class="link-course">
+            <div>
+              <h3>Dinámica</h3>
+            </div>
+            <div>
+              <p>Quiero saber más</p>
+            </div>
+          </a>
+        </div>
+        <div class="item-course">
+          <a class="link-course">
+            <div>
+              <h3>Ecuaciones diferenciales</h3>
+            </div>
+            <div>
+              <p>Quiero saber más</p>
+            </div>
+          </a>
+        </div>
+        <div class="item-course">
+          <a class="link-course">
+            <div>
+              <h3>Álgebra Lineal</h3>
+            </div>
+            <div>
+              <p>Quiero saber más</p>
+            </div>
+          </a>
+        </div>
+        <div class="item-course">
+          <a class="link-course">
+            <div>
+              <h3>Resistencia de materiales 1</h3>
+            </div>
+            <div>
+              <p>Quiero saber más</p>
+            </div>
+          </a>
+        </div>
+        <div class="item-course">
+          <a class="link-course">
+            <div>
+              <h3>Análisis estructural 1</h3>
+            </div>
+            <div>
+              <p>Quiero saber más</p>
+            </div>
+          </a>
+        </div>
+        <div class="item-course">
+          <a class="link-course">
+            <div>
+              <h3>Mecánica de fluidos</h3>
+            </div>
+            <div>
+              <p>Quiero saber más</p>
+            </div>
+          </a>
+        </div>
+        <div class="item-course">
+          <a class="link-course">
+            <div>
+              <h3>Concreto armado 1</h3>
+            </div>
+            <div>
+              <p>Quiero saber más</p>
+            </div>
+          </a>
+        </div>
       </article>
     </section>
 
