Terminé los estilos de la página principal

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
   <title>Grupo Piensa</title>
   <meta charset="utf-8">
-  <base target="_blank">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="styles/fonts.css">
@@ -26,8 +25,8 @@
           </a>
         </div>
         <div class="social-wrap">
-          <a href="https://www.facebook.com/grupopiensaaqp/" class="reference animate-scroll"><i class="fa-brands fa-facebook-f"></i></a>
-          <a href="https://www.tiktok.com/@tiopiensa" class="reference animate-scroll"><i class="fa-brands fa-tiktok"></i></a>
+          <a href="https://www.facebook.com/grupopiensaaqp/" target="_blank" class="reference animate-scroll"><i class="fa-brands fa-facebook-f"></i></a>
+          <a href="https://www.tiktok.com/@tiopiensa" target="_blank" class="reference animate-scroll"><i class="fa-brands fa-tiktok"></i></a>
           <a href="login.html" class="reference animate-scroll" target="_self">Acceder</a>
         </div>
 
@@ -71,12 +70,12 @@
           <p>Te brindamos ayuda tanto presencial como virtualmente</p>
         </div>
         <div>
-          <h3>Aprende y facilita tu estudio</h3>
-          <p>Tenemos más de 8 años de experiencia en la enseñanza</p>
-        </div>
-        <div>
           <h3>Material para estudiantes</h3>
           <p>Gran cantidad de materiales a disposición del alumno</p>
+        </div>
+        <div>
+          <h3>Aprende y facilita tu estudio</h3>
+          <p>Tenemos más de 8 años de experiencia en la enseñanza</p>
         </div>
       </article>
     </section>
@@ -95,7 +94,7 @@
               <h3>Cálculo 1</h3>
             </div>
             <div>
-              <p>Quiero saber más</p>
+              <i class="fa-solid fa-arrow-up-right-from-square"></i>
             </div>
           </a>
         </div>
@@ -105,7 +104,7 @@
               <h3>Matemática Básica</h3>
             </div>
             <div>
-              <p>Quiero saber más</p>
+              <i class="fa-solid fa-arrow-up-right-from-square"></i>
             </div>
           </a>
         </div>
@@ -115,7 +114,7 @@
               <h3>Física 1</h3>
             </div>
             <div>
-              <p>Quiero saber más</p>
+              <i class="fa-solid fa-arrow-up-right-from-square"></i>
             </div>
           </a>
         </div>
@@ -125,7 +124,7 @@
               <h3>Química 1</h3>
             </div>
             <div>
-              <p>Quiero saber más</p>
+              <i class="fa-solid fa-arrow-up-right-from-square"></i>
             </div>
           </a>
         </div>
@@ -135,7 +134,7 @@
               <h3>Cálculo 2</h3>
             </div>
             <div>
-              <p>Quiero saber más</p>
+              <i class="fa-solid fa-arrow-up-right-from-square"></i>
             </div>
           </a>
         </div>
@@ -145,7 +144,7 @@
               <h3>Física 2</h3>
             </div>
             <div>
-              <p>Quiero saber más</p>
+              <i class="fa-solid fa-arrow-up-right-from-square"></i>
             </div>
           </a>
         </div>
@@ -155,7 +154,7 @@
               <h3>Estática</h3>
             </div>
             <div>
-              <p>Quiero saber más</p>
+              <i class="fa-solid fa-arrow-up-right-from-square"></i>
             </div>
           </a>
         </div>
@@ -165,7 +164,7 @@
               <h3>Dinámica</h3>
             </div>
             <div>
-              <p>Quiero saber más</p>
+              <i class="fa-solid fa-arrow-up-right-from-square"></i>
             </div>
           </a>
         </div>
@@ -175,7 +174,7 @@
               <h3>Ecuaciones diferenciales</h3>
             </div>
             <div>
-              <p>Quiero saber más</p>
+              <i class="fa-solid fa-arrow-up-right-from-square"></i>
             </div>
           </a>
         </div>
@@ -185,7 +184,7 @@
               <h3>Álgebra Lineal</h3>
             </div>
             <div>
-              <p>Quiero saber más</p>
+              <i class="fa-solid fa-arrow-up-right-from-square"></i>
             </div>
           </a>
         </div>
@@ -195,7 +194,7 @@
               <h3>Resistencia de materiales 1</h3>
             </div>
             <div>
-              <p>Quiero saber más</p>
+              <i class="fa-solid fa-arrow-up-right-from-square"></i>
             </div>
           </a>
         </div>
@@ -205,7 +204,7 @@
               <h3>Análisis estructural 1</h3>
             </div>
             <div>
-              <p>Quiero saber más</p>
+              <i class="fa-solid fa-arrow-up-right-from-square"></i>
             </div>
           </a>
         </div>
@@ -215,7 +214,7 @@
               <h3>Mecánica de fluidos</h3>
             </div>
             <div>
-              <p>Quiero saber más</p>
+              <i class="fa-solid fa-arrow-up-right-from-square"></i>
             </div>
           </a>
         </div>
@@ -225,7 +224,7 @@
               <h3>Concreto armado 1</h3>
             </div>
             <div>
-              <p>Quiero saber más</p>
+              <i class="fa-solid fa-arrow-up-right-from-square"></i>
             </div>
           </a>
         </div>
@@ -239,42 +238,94 @@
       <header>
         <h2><span>Docentes profesionales y capacitados</span></h2>
       </header>
-      <article>
-        <div class="item-teacher"></div>
-        <div class="item-teacher"></div>
-        <div class="item-teacher"></div>
-        <div class="item-teacher"></div>
-        <div class="item-teacher"></div>
+      <article class="teachers-cards">
+        <div class="item-teacher">
+          <a class="link-teacher">
+            <div>
+              <img src="img/image7.png">
+            </div>
+            <div class="info-teacher">
+              <h3>Froilán Salcedo</h3>
+              <hr>
+              <div>
+                <h4>Ingeniero Civil UNSA</h4>
+                <h4>Maestría en recursos hídricos UNSA</h4>
+                <h4>Estudiante de Ingeniería ambiental UNI</h4>
+              </div>
+            </div>
+            <div>
+              <i class="fa-solid fa-arrow-up-right-from-square"></i>
+            </div>
+          </a>
+        </div>
+        <div class="item-teacher">
+          <a class="link-teacher">
+            <div>
+              <img src="img/image7.png">
+            </div>
+            <div class="info-teacher">
+              <h3>Edgard Aduvire</h3>
+              <hr>
+              <div>
+                <h4>Ingeniero Civil UNSA</h4>
+                <h4>Gerente Aducsa SAC</h4>
+                <h4>Maestría en Ingeniería estructural UNI</h4>
+              </div>
+            </div>
+            <div>
+              <i class="fa-solid fa-arrow-up-right-from-square"></i>
+            </div>
+          </a>
+        </div>
+        <div class="item-teacher">
+          <a class="link-teacher">
+            <div>
+              <img src="img/image7.png">
+            </div>
+            <div class="info-teacher">
+              <h3>Edgard Aduvire</h3>
+              <hr>
+              <div>
+                <h4>Ingeniero Civil UNSA</h4>
+                <h4>Gerente Aducsa SAC</h4>
+                <h4>Maestría en Ingeniería estructural UNI</h4>
+              </div>
+            </div>
+            <div>
+              <i class="fa-solid fa-arrow-up-right-from-square"></i>
+            </div>
+          </a>
+        </div>
       </article>
     </section>
     
     
 
     <footer>
-      <article>
+      <article class="footer-phrase">
         <h4>Sigue cualquiera de estos enlaces para mayor información.</h4>  
       </article>
-      <article>
+      <article class="footer-ubication">
         <h5 class="footer-heading">Ubicación</h5>
         <ul class="footer-list">
-          <li><a href="#">Academia</a></li>
-          <li><a href="#">Noticias</a></li>
-          <li><a href="#">Nuestros embajadores</a></li>
+          <li id="academia"><a href="#academia">Academia</a></li>
+          <li id="noticias"><a href="#noticias">Noticias</a></li>
+          <li id="embajadores"><a href="#embajadores">Nuestros embajadores</a></li>
         </ul>
       </article>
-      <article> 
+      <article class="footer-links"> 
         <h5 class="footer-heading">Enlaces</h5>
         <ul class="footer-list">
-          <li><a href="#">Cursos</a></li>
-          <li><a href="#">Profesores</a></li>
+          <li id="cursos"><a href="#cursos">Cursos</a></li>
+          <li id="profesores"><a href="#profesores">Profesores</a></li>
         </ul>
       </article>
-      <article>
+      <article class="footer-get-in-touch">
         <h5 class="footer-heading">Contacto</h5>
         <ul class="footer-list">
-          <li><a href="#">Centro de Ayuda</a></li>
-          <li><a href="#">Soporte a la comunidad</a></li>
-          <li><a href="#">Nuestros Sponsors</a></li>
+          <li id="ayuda"><a href="#ayuda">Centro de Ayuda</a></li>
+          <li id="soporte"><a href="#soporte">Soporte a la comunidad</a></li>
+          <li id="sponsors"><a href="#sponsors">Nuestros Sponsors</a></li>
         </ul>
       </article>
 
