Organizando los html's y css's

--- a/aulaVirtual.html
+++ b/aulaVirtual.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AulaVirtual</title>
-    <link rel="stylesheet" href="./styleters.css">
+    <link rel="stylesheet" href="styles/aulaVirtual.css">
 </head>
 <body>
     <div class="wrapper">
