--- a/aulaVirtual.html
+++ b/aulaVirtual.html
@@ -11,7 +11,7 @@
         <div class="tabladeopciones">
             <!-- Contenido del lado izquierdo (opciones) -->
             <div class="imagenes">
-                <img src="../img/download.png">
+                <img src="img/download.png">
             </div>
             <div class="opciones">
                 <ul>
@@ -27,7 +27,7 @@
             <div class="cursos">
                 <article class="curso">
                     <div class="imagen">
-                        <img src="../img/slide1.jpg" alt="Descripción de la imagen" width="190px" height="250px">
+                        <img src="img/slide1.jpg" alt="Descripción de la imagen" width="190px" height="250px">
                     </div>
                     <!-- Segunda parte con información especial -->
                     <div class="info-especial">
