--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" href="styles/fonts.css">
   <link rel="stylesheet" type="text/css" href="styles/normalize.css">
   <link rel="stylesheet" type="text/css" href="styles/structure.css">
+  <link rel="stylesheet" type="text/css" href="styles/indexstyle.css">
   <script src="https://kit.fontawesome.com/5e1720d8b8.js" crossorigin="anonymous"></script>
 </head>
 
