--- a/courses.html
+++ b/courses.html
@@ -65,15 +65,40 @@
 
         <section class="container-cards">
 
-            <article class="card card1">
+            <article id="calculo-1" class="card card1">
                 <div class="card-content">
-                    <div class="">
+                    <div class="title-card">
                         <h2>Cálculo 1</h2>
+                        <h3>Descripción del curso, aprederemos muchas cosas de cálculo interesantes como integreles  derivadas, etc</h3>
                     </div>
-                    <div>
-                        <h3>Turnos</h3>
-                        <h3>Materiales</h3>
-                        <h3>Profesores</h3>
+                    <div class="info-card">
+                        <div>
+                            <h3>Turnos</h3>
+                            <div class="info">
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                            </div>
+                        </div>
+                        <div>
+                            <h3>Materiales</h3>
+                            <div class="info">
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                            </div>
+                        </div>
+                        <div>
+                            <h3>Profesores</h3>
+                            <div class="info">
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
@@ -81,32 +106,115 @@
 
             <article class="card card2">
                 <div class="card-content">
-                    <div>
+                    <div class="title-card">
                         <h2>Cálculo 1</h2>
+                        <h3>Descripción del curso, aprederemos muchas cosas de cálculo interesantes como integreles  derivadas, etc</h3>
                     </div>
-                    <div>
-
+                    <div class="info-card">
+                        <div>
+                            <h3>Turnos</h3>
+                            <div class="info">
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                            </div>
+                        </div>
+                        <div>
+                            <h3>Materiales</h3>
+                            <div class="info">
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                            </div>
+                        </div>
+                        <div>
+                            <h3>Profesores</h3>
+                            <div class="info">
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </article>
 
             <article class="card card3">
                 <div class="card-content">
-                    <div>
+                    <div class="title-card">
                         <h2>Cálculo 1</h2>
+                        <h3>Descripción del curso, aprederemos muchas cosas de cálculo interesantes como integreles  derivadas, etc</h3>
                     </div>
-                    <div>
-
+                    <div class="info-card">
+                        <div>
+                            <h3>Turnos</h3>
+                            <div class="info">
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                            </div>
+                        </div>
+                        <div>
+                            <h3>Materiales</h3>
+                            <div class="info">
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                            </div>
+                        </div>
+                        <div>
+                            <h3>Profesores</h3>
+                            <div class="info">
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </article>
+
             <article class="card card4">
                 <div class="card-content">
-                    <div>
+                    <div class="title-card">
                         <h2>Cálculo 1</h2>
+                        <h3>Descripción del curso, aprederemos muchas cosas de cálculo interesantes como integreles  derivadas, etc</h3>
                     </div>
-                    <div>
-
+                    <div class="info-card">
+                        <div>
+                            <h3>Turnos</h3>
+                            <div class="info">
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                            </div>
+                        </div>
+                        <div>
+                            <h3>Materiales</h3>
+                            <div class="info">
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                            </div>
+                        </div>
+                        <div>
+                            <h3>Profesores</h3>
+                            <div class="info">
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                                <h4>Información, usar fetch</h4>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </article>
