Añadí los id a los botones de cursos de la pagina principal

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <!-- las tarjetas para cada curso-->
       <article class="courses-cards">
         <div class="item-course">
-          <a class="link-course">
+          <a class="link-course" href="courses.html#calculo-1">
             <div>
               <h3>Cálculo 1</h3>
             </div>
@@ -100,7 +100,7 @@
           </a>
         </div>
         <div class="item-course">
-          <a class="link-course">
+          <a class="link-course" href="courses.html#matematica-basica">
             <div>
               <h3>Matemática Básica</h3>
             </div>
@@ -110,7 +110,7 @@
           </a>
         </div>
         <div class="item-course">
-          <a class="link-course">
+          <a class="link-course" href="courses.html#fisica-1">
             <div>
               <h3>Física 1</h3>
             </div>
@@ -120,7 +120,7 @@
           </a>
         </div>
         <div class="item-course">
-          <a class="link-course">
+          <a class="link-course" href="courses.html#quimica-1">
             <div>
               <h3>Química 1</h3>
             </div>
@@ -130,7 +130,7 @@
           </a>
         </div>
         <div class="item-course">
-          <a class="link-course">
+          <a class="link-course" href="courses.html#calculo-2">
             <div>
               <h3>Cálculo 2</h3>
             </div>
@@ -140,7 +140,7 @@
           </a>
         </div>
         <div class="item-course">
-          <a class="link-course">
+          <a class="link-course" href="courses.html#fisica-2">
             <div>
               <h3>Física 2</h3>
             </div>
@@ -150,7 +150,7 @@
           </a>
         </div>
         <div class="item-course">
-          <a class="link-course">
+          <a class="link-course" href="courses.html#estatica">
             <div>
               <h3>Estática</h3>
             </div>
@@ -160,7 +160,7 @@
           </a>
         </div>
         <div class="item-course">
-          <a class="link-course">
+          <a class="link-course" href="courses.html#dinamica">
             <div>
               <h3>Dinámica</h3>
             </div>
@@ -170,7 +170,7 @@
           </a>
         </div>
         <div class="item-course">
-          <a class="link-course">
+          <a class="link-course" href="courses.html#ecuaciones-diferenciales">
             <div>
               <h3>Ecuaciones diferenciales</h3>
             </div>
@@ -180,7 +180,7 @@
           </a>
         </div>
         <div class="item-course">
-          <a class="link-course">
+          <a class="link-course" href="courses.html#algebra-lineal">
             <div>
               <h3>Álgebra Lineal</h3>
             </div>
@@ -190,7 +190,7 @@
           </a>
         </div>
         <div class="item-course">
-          <a class="link-course">
+          <a class="link-course" href="courses.html#resistencia-de-materiales-1">
             <div>
               <h3>Resistencia de materiales 1</h3>
             </div>
@@ -200,7 +200,7 @@
           </a>
         </div>
         <div class="item-course">
-          <a class="link-course">
+          <a class="link-course" href="courses.html#analisis-estructural-1">
             <div>
               <h3>Análisis estructural 1</h3>
             </div>
@@ -210,7 +210,7 @@
           </a>
         </div>
         <div class="item-course">
-          <a class="link-course">
+          <a class="link-course" href="courses.html#mecanica-de-fluidos">
             <div>
               <h3>Mecánica de fluidos</h3>
             </div>
@@ -220,7 +220,7 @@
           </a>
         </div>
         <div class="item-course">
-          <a class="link-course">
+          <a class="link-course" href="courses.html#concreto-armado-1">
             <div>
               <h3>Concreto armado 1</h3>
             </div>
